redteam/rollout/bad_overlays/rollout-latest-tag.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: edgesight-qa-rollout-bad-latest
  namespace: vision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgesight-qa
  template:
    metadata:
      labels:
        app: edgesight-qa
    spec:
      containers:
        - name: app
          image: ghcr.io/aurelius-in/edgesight-qa:latest
